Img handling with gulp

--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "@vituum/vite-plugin-postcss": "^1.1.0",
     "@vituum/vite-plugin-pug": "^1.1.0",
     "autoprefixer": "^10.4.20",
+    "gulp": "^5.0.0",
+    "gulp-cheerio": "^1.0.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-svgmin": "^4.1.0",
+    "gulp-svgstore": "^9.0.0",
+    "gulp-webp": "^5.0.0",
     "jquery": "^3.7.1",
     "jquery-validation": "^1.21.0",
     "postcss": "^8.4.41",
