--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.7.1",
     "jquery-validation": "^1.21.0",
     "postcss": "^8.4.41",
+    "postcss-combine-duplicated-selectors": "^10.0.3",
     "postcss-sort-media-queries": "^5.2.0",
     "sass": "^1.77.8",
     "vite": "^5.4.1",
@@ -42,7 +43,8 @@
   "postcss": {
     "plugins": {
       "autoprefixer": {},
-      "postcss-sort-media-queries": {}
+      "postcss-sort-media-queries": {},
+      "postcss-combine-duplicated-selectors": {}
     }
   }
 }
