--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "vite build",
     "preview": "vite preview",
     "webp": "gulp toWebp",
-    "svgs": "gulp svgs",
     "icons": "gulp icons"
   },
   "devDependencies": {
@@ -27,7 +26,9 @@
     "postcss-combine-duplicated-selectors": "^10.0.3",
     "postcss-sort-media-queries": "^5.2.0",
     "sass": "^1.77.8",
-    "vite": "^5.4.1",
+    "svgo": "^3.3.2",
+    "vite": "^5.4.2",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "vituum": "^1.1.1"
   },
   "browserslist": [
