--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.4.41",
     "postcss-combine-duplicated-selectors": "^10.0.3",
     "postcss-sort-media-queries": "^5.2.0",
+    "pug": "^3.0.3",
     "sass": "^1.77.8",
     "svgo": "^3.3.2",
     "vite": "^5.4.2",
